rm pointer events on grid install btns, more curve landing spacing (bug 1120605)

--- a/src/media/css/feed/collections.styl
+++ b/src/media/css/feed/collections.styl
@@ -123,13 +123,7 @@
         display-flex();
     }
     .collection-landing-wrapper .collection-landing {
-        margin-top: 20px;
-    }
-    [data-collection-landing-has-description] .collection-landing {
-        // The curve is absolutely positioned. The div doesn't have the
-        // height of the curve. Had to add 20px extra margin to reach the 40px
-        // spacing desired.
-        margin-top: 60px;
+        margin-top: 45px;
     }
     [data-collection-landing-has-background-image] {
         .collection-landing-curve-inner {
