--- a/src/media/css/feed/curves.styl
+++ b/src/media/css/feed/curves.styl
@@ -16,11 +16,6 @@
 }
 
 .collection-landing-wrapper .feed-landing-curve {
-    bottom: -20px;
-    height: 125px;
-}
-
-[data-collection-landing-has-description] .feed-landing-curve {
     bottom: -60px;
     height: 165px;
 }
