--- a/src/media/css/feed/icon-grid.styl
+++ b/src/media/css/feed/icon-grid.styl
@@ -36,6 +36,7 @@
         color: $action-positive;
         font-size: 15px;
         height: auto;
+        pointer-events: none;
         position: relative;
 
         em {
